--- a/TextRPGGame.vcxproj
+++ b/TextRPGGame.vcxproj
@@ -125,6 +125,9 @@
   <ItemGroup>
     <ClCompile Include="TextRPGGame.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Include=".gitignore" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
