캐릭터 클래스 구현
필수요구사항만 구현

--- a/TextRPGGame.vcxproj
+++ b/TextRPGGame.vcxproj
@@ -123,7 +123,12 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Character.cpp" />
+    <ClCompile Include="test.cpp" />
     <ClCompile Include="TextRPGGame.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Character.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
