도트 모음, 도트 출력 테스트 cpp파일 추가

--- a/TextRPGGame.vcxproj
+++ b/TextRPGGame.vcxproj
@@ -123,6 +123,8 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="art.cpp" />
+    <ClCompile Include="askii test.cpp" />
     <ClCompile Include="AttackBoost.cpp" />
     <ClCompile Include="Character.cpp" />
     <ClCompile Include="GameManager.cpp" />
