--- a/TextRPGGame.vcxproj
+++ b/TextRPGGame.vcxproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup Label="ProjectConfigurations">
     <ProjectConfiguration Include="Debug|Win32">
@@ -129,32 +129,32 @@
     <ClCompile Include="askii test.cpp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
     </ClCompile>
-    <ClCompile Include="AttackBoost.cpp" />
-    <ClCompile Include="BossMonster.cpp" />
-    <ClCompile Include="Character.cpp" />
-    <ClCompile Include="GameManager.cpp" />
-    <ClCompile Include="Goblin.cpp" />
-    <ClCompile Include="HealthPotion.cpp" />
-    <ClCompile Include="inventory.cpp" />
-    <ClCompile Include="Orc.cpp" />
-    <ClCompile Include="Shop.cpp" />
+    <ClCompile Include="Item\AttackBoost.cpp" />
+    <ClCompile Include="Monster\BossMonster.cpp" />
+    <ClCompile Include="Character\Character.cpp" />
+    <ClCompile Include="GameManager\GameManager.cpp" />
+    <ClCompile Include="Monster\Goblin.cpp" />
+    <ClCompile Include="Item\HealthPotion.cpp" />
+    <ClCompile Include="Item\inventory.cpp" />
+    <ClCompile Include="Monster\Orc.cpp" />
+    <ClCompile Include="Item\Shop.cpp" />
     <ClCompile Include="TextRPGGame.cpp" />
-    <ClCompile Include="Troll.cpp" />
+    <ClCompile Include="Monster\Troll.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="AttackBoost.h" />
-    <ClInclude Include="BossMonster.h" />
-    <ClInclude Include="Character.h" />
-    <ClInclude Include="GameManager.h" />
-    <ClInclude Include="Goblin.h" />
-    <ClInclude Include="HealthPotion.h" />
-    <ClInclude Include="inventory.h" />
-    <ClInclude Include="item.h" />
-    <ClInclude Include="MainArt.h" />
-    <ClInclude Include="Monster.h" />
-    <ClInclude Include="Orc.h" />
-    <ClInclude Include="Shop.h" />
-    <ClInclude Include="Troll.h" />
+    <ClInclude Include="Item\AttackBoost.h" />
+    <ClInclude Include="Monster\BossMonster.h" />
+    <ClInclude Include="Character\Character.h" />
+    <ClInclude Include="GameManager\GameManager.h" />
+    <ClInclude Include="Monster\Goblin.h" />
+    <ClInclude Include="Item\HealthPotion.h" />
+    <ClInclude Include="Item\inventory.h" />
+    <ClInclude Include="Item\item.h" />
+    <ClInclude Include="GameManager\MainArt.h" />
+    <ClInclude Include="Monster\Monster.h" />
+    <ClInclude Include="Monster\Orc.h" />
+    <ClInclude Include="Item\Shop.h" />
+    <ClInclude Include="Monster\Troll.h" />
     <Content Include=".gitignore" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
